--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 
         <div class="GR-header">
             <h2>Griechisch Römisch</h2>
+            <h4>Griechisch-römisches Ringen ist eine Disziplin des Ringersports, bei
+                der nur der Oberkörper und die Arme für Griffe und Techniken genutzt
+                werden dürfen, während Angriffe unterhalb der Gürtellinie verboten sind.</h4>
             <h4>
                 Sobald man unter den Schwerpunkt des Gegner gekommen ist, ist es einfach Ihn
                 zu bewegen und zu Werfen. Mit Schwerpunkt meine ich in erster Linie den Solaplxus.
