--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                     <li>Eindrehen und werfen</li>
                 </ol>
                 <div>
-                    <img class="technik-bild" src="img/Hüftschwung.jpg" alt="Bild  des Hüftschwung">
-                    <img class="technik-bild" src="img/Hüftschwung2.jpg" alt="Bild  des Hüftschwung">
+                    <img class="technik-bild" src="img/Hüftschwung.jpg" alt="Bild 1 des Hüftschwung">
+                    <img class="technik-bild" src="img/Hüftschwung2.jpg" alt="Bild 2 des Hüftschwung">
                 </div>
 
             </div>
