--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                     <li>Necktie und Ellenbogen auf Kopfseite greifen</li>
                     <li>Füße ggf Wechseln und hüfte gegen Hüfte</li>
                 </ol>
-                <img class="technik-bild" src="img/Kopfhüftschwung.jpg" alt="Bild  des Kopfhüftschwung">
-                <img class="technik-bild" src="img/Kopfhüftschwung2.jpg" alt="Bild  des Kopfhüftschwung">
+                <img class="technik-bild" src="img/Kopfhüftschwung.jpg" alt="Bild 1 des Kopfhüftschwung">
+                <img class="technik-bild" src="img/Kopfhüftschwung2.jpg" alt="Bild 2 des Kopfhüftschwung">
             </div>
             <div class="technik">
                 <h3>Bodenkampf</h3>
