--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                     <li>Eindrehen und werfen</li>
                 </ol>
                 <div>
-                    <img class="technik-bild" src="img/Hüftschwung.jpg" alt="Bild 1 des Hüftschwung">
-                    <img class="technik-bild" src="img/Hüftschwung2.jpg" alt="Bild 2 des Hüftschwung">
+                    <img class="technik-bild" src="img/Hüftschwung.JPG" alt="Bild 1 des Hüftschwung">
+                    <img class="technik-bild" src="img/Hüftschwung2.JPG" alt="Bild 2 des Hüftschwung">
                 </div>
 
             </div>
@@ -68,8 +68,8 @@
                     <li>Necktie und Ellenbogen auf Kopfseite greifen</li>
                     <li>Füße ggf Wechseln und hüfte gegen Hüfte</li>
                 </ol>
-                <img class="technik-bild" src="img/Kopfhüftschwung.jpg" alt="Bild 1 des Kopfhüftschwung">
-                <img class="technik-bild" src="img/Kopfhüftschwung2.jpg" alt="Bild 2 des Kopfhüftschwung">
+                <img class="technik-bild" src="img/Kopfhüftschwung.JPG" alt="Bild 1 des Kopfhüftschwung">
+                <img class="technik-bild" src="img/Kopfhüftschwung2.JPG" alt="Bild 2 des Kopfhüftschwung">
             </div>
             <div class="technik">
                 <h3>Bodenkampf</h3>
